--- a/Restful/src/main/resources/application.properties
+++ b/Restful/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/restapi
+spring.datasource.url = jdbc:mysql://localhost:3306/livre
 spring.datasource.username = root
 spring.datasource.password = (Non?562Cagl77_-
 
